--- a/notebooks/debug.ipynb
+++ b/notebooks/debug.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../src/metrics/BARTScore')\n",
-    "sys.path.append('../src/metrics/GPTScore')"
+    "sys.path.append('../src/metrics/BARTScore')"
    ]
   },
   {
@@ -20,7 +19,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-08-10 15:32:47,090] [INFO] [real_accelerator.py:133:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n"
+      "[2023-08-15 08:55:00,334] [INFO] [real_accelerator.py:133:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n"
      ]
     }
    ],
@@ -433,6 +432,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
