--- a/notebooks/debug.ipynb
+++ b/notebooks/debug.ipynb
@@ -438,54 +438,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "0.5"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.metrics import f1_score\n",
-    "f1_score(['rise'], ['fall'], average='weighted', labels=['rise', 'fall'])"
+    "f1_score(['rise', 'fall'], ['missing', 'fall'], average='weighted', labels=['rise', 'fall'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labels=['rise', 'fall']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "'a' is not in list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m labels\u001b[39m.\u001b[39;49mindex(\u001b[39m'\u001b[39;49m\u001b[39ma\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "\u001b[0;31mValueError\u001b[0m: 'a' is not in list"
-     ]
+     "data": {
+      "text/plain": [
+       "-0.3333333333333333"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "labels.index('a')"
+    "from sklearn.metrics import matthews_corrcoef\n",
+    "matthews_corrcoef([0, 1, 2], [-1, 2, 0])"
    ]
   },
   {
