--- a/notebooks/evaluate.ipynb
+++ b/notebooks/evaluate.ipynb
@@ -12,12 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.utils import MultiClient\n",
-    "from sklearn.metrics import confusion_matrix, matthews_corrcoef\n",
+    "from sklearn.metrics import confusion_matrix, matthews_corrcoef, f1_score, accuracy_score\n",
     "import json"
    ]
   },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -72,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 200/200 [03:21<00:00,  1.01s/it]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 200/200 [03:21<00:00,  1.01s/it]\n"
      ]
     }
    ],
@@ -95,46 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Fall',\n",
-       " 'Fall',\n",
-       " 'Rise',\n",
-       " 'Fall',\n",
-       " 'Rise',\n",
-       " 'Fall',\n",
-       " 'Fall',\n",
-       " 'Fall',\n",
-       " 'Fall',\n",
-       " 'Fall',\n",
-       " 'Fall',\n",
-       " 'Rise',\n",
-       " 'Fall',\n",
-       " 'Rise',\n",
-       " 'Rise',\n",
-       " 'Fall',\n",
-       " 'Fall',\n",
-       " 'Fall',\n",
-       " 'Fall',\n",
-       " 'Fall']"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,22 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MCC: 0.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py:873: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  mcc = cov_ytyp / np.sqrt(cov_ytyt * cov_ypyp)\n"
+      "MCC: -0.05380001385625025\n"
      ]
     }
    ],
@@ -185,15 +138,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1: 0.4573069852941177\n"
+     ]
+    }
+   ],
+   "source": [
+    "f1 = f1_score(y_true, y_pred, average='weighted')\n",
+    "print(f'F1: {f1}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy: 0.51\n"
+     ]
+    }
+   ],
+   "source": [
+    "accuracy = accuracy_score(y_true, y_pred)\n",
+    "print(f'accuracy: {accuracy}')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
